# SSVMContainer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/storage/: file_system.rs
