[package]
name = "ssvm_container"
version = "0.1.0"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
leveldb = "0.8"
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
