[package]
name = "ssvm_container"
description = "An application that sits between the web i.e. RPC calls from SSVMRPC < https://github.com/second-state/SSVMRPC > and SSVM < https://github.com/second-state/SSVM >"
version = "0.1.3"
authors = ["tpmccallum <mistermac2008@gmail.com>"]
edition = "2018"
repository = "https://github.com/second-state/SSVMContainer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
serde_json = { git = "https://github.com/serde-rs/json" }
uuid = { version = "0.8", features = ["v4"] }
rand = "0.7.2"
wat = { git = "https://github.com/bytecodealliance/wat" }